# fiors

./: Cargo.toml
examples/: gen_building_db.rs  gen_material_db.rs  gen_recipe_db.rs  inventory.rs  local_markets.rs  tui.rs
examples/tui/: main.rs  widgets.rs
examples/tui/widgets/: buildings.rs  debug.rs  depth.rs  global.rs  inventory.rs  lm_widget.rs  market.rs  production.rs
src/: building_db.rs  lib.rs  material_db.rs  materials.rs  recipe_db.rs  types.rs
test_data/: exchange_COT_CI1.json  exchange_PWO_CI1.json  exchange_SF_CI1.json  material_allmaterials.json  storage_eminence32.json
