[package]
name = "fiors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
chrono = "0.4.37"
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
colored = "2.1.0"

[dev-dependencies]
crossterm = "0.27.0"
prettyplease = "0.2.17"
quote = "1.0.35"
ratatui = "0.26.1"
syn = { version = "2.0.58", features = ["full"] }
