[package]
name = "fiors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
chrono = "0.4.37"
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
colored = "2.1.0"
dashmap = "5.5.3"

# Stuff used to generate DB files
proc-macro2 = { version = "1.0.81", optional = true }
quote = { version = "1.0.35", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ratatui-macros = "0.2.4"

[dev-dependencies]
crossterm = "0.27.0"
prettyplease = "0.2.17"
proc-macro2 = "1.0.81"
quote = "1.0.35"
ratatui = "0.26.1"
syn = { version = "2.0.58", features = ["full"] }
toml = "0.8.19"

[features]
default = []
live_tests = []
gendb = ["proc-macro2", "quote"]

[profile.release]
debug = true

